--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,7 +137,7 @@ html {
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background: url(/assets/img/slider/slider1.jpg) top center / cover no-repeat;
+    background: url('../img/slider/slider1.jpg') top center / cover no-repeat;
 }
 
 #slider .text-content {
@@ -157,6 +157,7 @@ html {
 #slider .text-description {
     margin-top: 25px;
     font-size: 15px;
+    text-shadow: 0 0 1px #000;
 }
 
 /* Content */
@@ -376,7 +377,6 @@ html {
     max-width: calc(100% - 32px);
     min-height: 200px;
     position: relative;
-    top: -10%;
     animation: modalFadeIn ease 0.4s;
 }
 
