--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,15 +1,15 @@
 
 /* PC >= 1024px */
-@media (min-width: 1024px) {
+@media (min-width: 64em) {
 
 }
 
 /* Tablet >=740px & < 1024px */
-@media (min-width: 740px) and (max-width: 1023px) {
+@media (min-width: 46.25em) and (max-width: 63.9375em) {
 }
 
 /* Tablet & Mobile  */
-@media (max-width: 1023px) {
+@media (max-width: 63.9375em) {
     .btn {
         padding: 16px 16px;
     }
@@ -20,10 +20,15 @@
 
     .contact-form .form-control {
         padding: 15px;
+        font-size: 16px;
     }
-    
+
     .contact-info {
         line-height: 2;
+    }
+
+    .contact-submit-btn {
+        font-size: 16px;
     }
 
     #footer .social-list {
@@ -40,7 +45,7 @@
 }
 
 /* Mobile < 740px */
-@media (max-width: 740px) {
+@media (max-width: 46.1875em) {
     .s-full-width,
     .s-col-full {
         width: 100% !important;
